@@ -55,7 +55,8 @@ Version 1.4
 
 - Small PHP lexer string escaping fix (#515).
 
-- Support unsigned/long long literals in C/C++ (#613).
+- Support comments before preprocessor directives, and unsigned/
+  long long literals in C/C++ (#613, #616).
 
 
 Version 1.3.1
